test/units/TypingSpec/invalid/types/lin-twice.algst
\[a:TL] (f : a -> a -> a) (a : a) -> f a a
